--- a/comp1238.md
+++ b/comp1238.md
@@ -1,1 +1,28 @@
-## WEEK 1 - 
+## WEEK 1 - History
+- Text and Tools
+- Structured Data
+- Number Systems
+
+## WEEK 2 - Bits and Bytes
+- Binary System
+- Memory Types
+- Number Representation
+- Text Representation
+- File Types
+
+## WEEK 3 - Text Structre
+- Markup Languages
+- Special Characters and Escaping
+- Structured Data
+
+
+## WEEK 4 - Keyboards and Editors
+- Keyboard Mastery
+- Text editors
+- Search Techniques
+
+## WEEK 5 - Command Line Interfaces
+- Modern CLI Usage
+- Basic CLI Commands
+- Remote Access Security
+
